[package]
name = "rs-net-radio"
version = "0.1.0"
edition = "2018"


[dependencies]
reqwest = { version = "0.11.4", features = ["blocking","json"] }
scraper = "0.12.0"
log = "0.4.14"
env_logger = "0.9.0"
chrono = "0.4.19"
tokio= "1.10.1"
tokio-cron-scheduler = "0.2.1"
clap = "2.33.3"
serde_json = "1.0.68"
serde = {version="1.0.130", features = ["derive"] }
m3u8-rs = "2.0.0"
nom = "7.0.0"
tempfile = "3.2.0"
http = "0.2.4"

