[package]
name = "abematv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-url = "1.4.10"
chrono = "0.4.19"
digest = "0.10.1"
"hmac" = "*"
log = "0.4.14"
m3u8-rs = "3.0.0"
reqwest = { version = "0.11.8", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
sha2 = "0.10.0"
tokio = { version = "1.15.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }
