[package]
name = "domain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"

log = "0.4.14"
m3u8-rs = "2.1.0"
nom = "7.1.0"

reqwest = { version = "0.11.4", features = ["blocking","json"] }
serde = {version="1.0.130", features = ["derive"] }
tempfile = "3.2.0"
url = "2.2.2"
