[package]
name = "record-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
fs_extra = "1.2.0"
http = "0.2.7"
log = "0.4.16"
m3u8-rs = "4.0.0"
nom = "7.1.1"
reqwest = { version = "0.11.10", features = ["blocking","json"] }
scraper = "0.13.0"
serde = { version = "1.0.136", features = ["derive"] }
serde-xml-rs = "0.5.1"
serde_derive = "1.0.131"
serde_json = "1.0.79"
tempdir = "0.3.7"
tempfile = "3.3.0"
xml-rs = "0.8.4"
