[package]
name = "record-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
chrono = "0.4.23"
fs_extra = "1.2.0"
http = "0.2.8"
log = "0.4.17"
m3u8-rs = "5.0.2"
nom = "7.1.1"
reqwest = { version = "0.11.13", features = ["blocking","json"] }
scraper = "0.13.0"
serde = { version = "1.0.150", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_derive = "1.0.131"
serde_json = "1.0.89"
tempdir = "0.3.7"
tempfile = "3.3.0"
xml-rs = "0.8.4"
