[package]
name = "record-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
chrono = "0.4.24"
fs_extra = "1.3.0"
http = "0.2.8"
log = "0.4.17"
m3u8-rs = "5.0.3"
nom = "7.1.3"
reqwest = { version = "0.11.14", features = ["blocking","json"] }
scraper = "0.16.0"
serde = { version = "1.0.158", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_derive = "1.0.152"
serde_json = "1.0.96"
tempdir = "0.3.7"
tempfile = "3.5.0"
xml-rs = "0.8.4"
